--- a/notebooks/image_editing.ipynb
+++ b/notebooks/image_editing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "image = Image.open('../assets/RED BUS.jpg')#.resize((512,512))\n",
+    "#image = Image.open('../assets/RED BUS.jpg')#.resize((512,512))\n",
+    "image = Image.open('../assets/bollywood.png')\n",
     "image.thumbnail((512,512),Image.Resampling.LANCZOS)\n",
     "init_state = dict(\n",
     "    IMAGE=image.convert('RGB')\n",
@@ -76,9 +77,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "instruction = \"Select the red bus and blur the background\"\n",
-    "# instruction = \"Replace the red bus with a blue bus\"\n",
-    "# instruction = \"Create a colorpop of the man in black henley and also blur the background\"\n",
+    "#instruction = \"Select the red bus and blur the background\"\n",
+    "#instruction = \"Replace the red bus with a blue bus\"\n",
+    "instruction = \"Create a colorpop of the man in black henley and also blur the background\"\n",
     "prog,_ = generator.generate(instruction)\n",
     "print(prog)"
    ]
@@ -98,7 +99,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "result"
+    "result\n",
+    "result.save('../result/final2.jpg')"
    ]
   },
   {
@@ -120,9 +122,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "VisProg",
    "language": "python",
-   "name": "python3"
+   "name": "vp"
   },
   "language_info": {
    "codemirror_mode": {
@@ -134,7 +136,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.10.13"
   },
   "vscode": {
    "interpreter": {
