--- a/notebooks/image_editing.ipynb
+++ b/notebooks/image_editing.ipynb
@@ -62,8 +62,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#image = Image.open('../assets/RED BUS.jpg')#.resize((512,512))\n",
-    "image = Image.open('../assets/bollywood.png')\n",
+    "image = Image.open('../assets/tree.jpg')\n",
+    "\n",
     "image.thumbnail((512,512),Image.Resampling.LANCZOS)\n",
     "init_state = dict(\n",
     "    IMAGE=image.convert('RGB')\n",
@@ -77,9 +77,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#instruction = \"Select the red bus and blur the background\"\n",
-    "#instruction = \"Replace the red bus with a blue bus\"\n",
-    "instruction = \"Create a colorpop of the man in black henley and also blur the background\"\n",
+    "# instruction = \"Select person Benedict Cumberbatch and Martin Freeman, and blur\"\n",
+    "# instruction = \"Select the door-stuff, and blur\"\n",
+    "# instruction = \"Select the man with brown hat, and blur\"\n",
+    "# instruction = \"Select black hat person and brown hat person, and blur\"\n",
+    "# instruction = \"Select male lead characters from Sherlock homes series and blur the background\"\n",
+    "# instruction = \"Select Daniel Radcliffe and blur the background\"\n",
+    "# instruction = \"Select lead character from Harry Potter and blur the background\"\n",
+    "# instruction = \"Select person Timothée Chalamet, and blur the background\"\n",
+    "# instruction = \"Select the tree and blur the background\"\n",
+    "instruction = \"Select sky and tree, and blur\"\n",
+    "# instruction = \"Select person wearing white suit and blur\"\n",
+    "# instruction = \"Select right girl and ground, and blur the background\"\n",
+    "# instruction = \"Select tree and road, and blur background\"\n",
+    "# instruction = \"Select man with black hat and blur the background\"\n",
+    "# instruction = \"Select person wearing gray hood, and blur\"\n",
+    "# instruction = \"Blur truck and flower\"\n",
+    "# instruction = \"Select tree, sky and blur\"\n",
+    "# instruction = \"Blur blue road sign\"\n",
     "prog,_ = generator.generate(instruction)\n",
     "print(prog)"
    ]
@@ -100,7 +115,7 @@
    "outputs": [],
    "source": [
     "result\n",
-    "result.save('../result/final2.jpg')"
+    "result.save(\"../result/Blur_Image.jpg\")"
    ]
   },
   {
@@ -122,9 +137,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "VisProg",
+   "display_name": "visProg",
    "language": "python",
-   "name": "vp"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -137,11 +152,6 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.10.13"
-  },
-  "vscode": {
-   "interpreter": {
-    "hash": "f6aae81381dc24e2fd0d8778e266667bb8dbd7e1c04425e21584f774a2d20c40"
-   }
   }
  },
  "nbformat": 4,
