--- a/testserver.ipynb
+++ b/testserver.ipynb
@@ -2,14 +2,71 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "importing Jupyter notebook from gqa_module.ipynb\n",
+      "env: OPENAI_API_KEY=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\n"
+     ]
+    },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "127.0.0.1 - - [29/Mar/2024 01:43:58] \"GET /visResult HTTP/1.1\" 200 -\n"
+      "c:\\Users\\berry\\anaconda3\\envs\\visProg\\lib\\site-packages\\scipy\\__init__.py:177: UserWarning: A NumPy version >=1.18.5 and <1.26.0 is required for this version of SciPy (detected version 1.26.3\n",
+      "  warnings.warn(f\"A NumPy version >={np_minversion} and <{np_maxversion}\"\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Registering LOC step\n",
+      "Registering COUNT step\n",
+      "Registering CROP step\n",
+      "Registering CROP_RIGHTOF step\n",
+      "Registering CROP_LEFTOF step\n",
+      "Registering CROP_FRONTOF step\n",
+      "Registering CROP_INFRONTOF step\n",
+      "Registering CROP_INFRONT step\n",
+      "Registering CROP_BEHIND step\n",
+      "Registering CROP_AHEAD step\n",
+      "Registering CROP_BELOW step\n",
+      "Registering CROP_ABOVE step\n",
+      "Registering VQA step\n",
+      "Registering EVAL step\n",
+      "Registering RESULT step\n",
+      " * Serving Flask app '__main__'\n",
+      " * Debug mode: off\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: This is a development server. Do not use it in a production deployment. Use a production WSGI server instead.\n",
+      " * Running on http://127.0.0.1:5000\n",
+      "Press CTRL+C to quit\n",
+      "127.0.0.1 - - [29/Mar/2024 03:44:03] \"GET / HTTP/1.1\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LOC\n",
+      "LOC\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [29/Mar/2024 03:46:21] \"GET /visResult HTTP/1.1\" 200 -\n"
      ]
     },
     {
@@ -17,6 +74,40 @@
      "output_type": "stream",
      "text": [
       "COUNT\n",
+      "COUNT\n",
+      "EVAL\n",
+      "RESULT\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [29/Mar/2024 03:46:58] \"GET / HTTP/1.1\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LOC\n",
+      "LOC\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [29/Mar/2024 03:48:43] \"GET /visResult HTTP/1.1\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "COUNT\n",
+      "COUNT\n",
+      "EVAL\n",
       "RESULT\n"
      ]
     }
