--- a/testserver_imgeEdit.ipynb
+++ b/testserver_imgeEdit.ipynb
@@ -2,9 +2,143 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "importing Jupyter notebook from gqa_module.ipynb\n",
+      "env: OPENAI_API_KEY=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\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\berry\\anaconda3\\envs\\visProg\\lib\\site-packages\\scipy\\__init__.py:177: UserWarning: A NumPy version >=1.18.5 and <1.26.0 is required for this version of SciPy (detected version 1.26.3\n",
+      "  warnings.warn(f\"A NumPy version >={np_minversion} and <{np_maxversion}\"\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Registering FACEDET step\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\berry\\anaconda3\\envs\\visProg\\lib\\site-packages\\torchvision\\models\\_utils.py:208: UserWarning: The parameter 'pretrained' is deprecated since 0.13 and may be removed in the future, please use 'weights' instead.\n",
+      "  warnings.warn(\n",
+      "c:\\Users\\berry\\anaconda3\\envs\\visProg\\lib\\site-packages\\torchvision\\models\\_utils.py:223: UserWarning: Arguments other than a weight enum or `None` for 'weights' are deprecated since 0.13 and may be removed in the future. The current behavior is equivalent to passing `weights=None`.\n",
+      "  warnings.warn(msg)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Registering SEG step\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\berry\\anaconda3\\envs\\visProg\\lib\\site-packages\\transformers\\models\\maskformer\\feature_extraction_maskformer.py:28: FutureWarning: The class MaskFormerFeatureExtractor is deprecated and will be removed in version 5 of Transformers. Please use MaskFormerImageProcessor instead.\n",
+      "  warnings.warn(\n",
+      "c:\\Users\\berry\\anaconda3\\envs\\visProg\\lib\\site-packages\\transformers\\models\\maskformer\\image_processing_maskformer.py:403: FutureWarning: The `size_divisibility` argument is deprecated and will be removed in v4.27. Please use `size_divisor` instead.\n",
+      "  warnings.warn(\n",
+      "c:\\Users\\berry\\anaconda3\\envs\\visProg\\lib\\site-packages\\transformers\\models\\maskformer\\image_processing_maskformer.py:410: FutureWarning: The `max_size` argument is deprecated and will be removed in v4.27. Please use size['longest_edge'] instead.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Registering SELECT step\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "`text_config_dict` is provided which will be used to initialize `CLIPTextConfig`. The value `text_config[\"id2label\"]` will be overriden.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Registering COLORPOP step\n",
+      "Registering BGBLUR step\n",
+      "Registering EMOJI step\n",
+      "Registering RESULT step\n",
+      " * Serving Flask app '__main__'\n",
+      " * Debug mode: off\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: This is a development server. Do not use it in a production deployment. Use a production WSGI server instead.\n",
+      " * Running on http://127.0.0.1:5000\n",
+      "Press CTRL+C to quit\n",
+      "127.0.0.1 - - [02/May/2024 00:54:07] \"GET / HTTP/1.1\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SEG\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "`label_ids_to_fuse` unset. No instance will be fused.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_keys(['segmentation', 'segments_info'])\n",
+      "SELECT\n",
+      "COLORPOP\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [02/May/2024 00:54:21] \"GET /imageEditResult HTTP/1.1\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RESULT\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [02/May/2024 00:54:21] \"GET /get_image?url=result/colorPop_bowl.jpg HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [02/May/2024 00:54:21] \"GET /get_image?url=assets/food.jpg HTTP/1.1\" 200 -\n"
+     ]
+    }
+   ],
    "source": [
     "# 서버 구동\n",
     "\n",
@@ -17,7 +151,6 @@
     "if module_path not in sys.path:\n",
     "    sys.path.append(module_path)\n",
     "%env OPENAI_API_KEY=<Enter you key here>\n",
-    "from engine.utils import ProgramGenerator, ProgramInterpreter\n",
     "from prompts.imgeEdit import PROMPT\n",
     "\n",
     "app = Flask(__name__)\n",
@@ -45,14 +178,18 @@
     "@app.route('/imageEditResult')\n",
     "def visResult():\n",
     "    \n",
-    "    #url = 'assets/bollywood.png'\n",
-    "    #chat = \"Create a colorpop of the man in black henley and also blur the background\"\n",
+    "    # url = 'assets/bollywood.png'\n",
+    "    # chat = \"Create a colorpop of the man in black henley and also blur the background\"\n",
     "    \n",
-    "    url = 'assets/camel2.png'\n",
-    "    chat = \"Select the camel, and blur the background\"\n",
+    "    # url = 'assets/camel2.png'\n",
+    "    # chat = \"Select the person, and blur the background\"\n",
+    "    \n",
+    "    url = 'assets/food.jpg'\n",
+    "    chat = \"Create a colorpop of the bowl\"\n",
+    "    \n",
     "    result = exe_imageEdit(url, chat, interpreter, generator)\n",
     "    \n",
-    "    result_path = 'result/final1.jpg'\n",
+    "    result_path = 'result/colorPop_bowl.jpg'\n",
     "    result.save(result_path)\n",
     "    \n",
     "    return f'''<!doctype html>\n",
@@ -65,7 +202,8 @@
     "        </body>\n",
     "    </html>\n",
     "    '''\n",
-    "\n",
+    "    \n",
+    "    \n",
     "@app.route('/get_image')\n",
     "def get_image():\n",
     "    # URL로 전달된 파일 경로 가져오기\n",
@@ -83,9 +221,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "VisProg",
+   "display_name": "visProg",
    "language": "python",
-   "name": "vp"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
