--- a/notebooks/image_editing.ipynb
+++ b/notebooks/image_editing.ipynb
@@ -22,7 +22,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "env: OPENAI_API_KEY=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\n"
+      "env: OPENAI_API_KEY="
      ]
     }
    ],
