--- a/gqa_module.ipynb
+++ b/gqa_module.ipynb
@@ -26,7 +26,19 @@
     "    prog,_ = generator.generate(dict(question=question))\n",
     "    result, prog_state, html_str = interpreter.execute(prog,init_state,inspect=True)\n",
     "    return html_str\n",
-    "\n"
+    "\n",
+    "def exe_imageEdit(imageURL, chat, interpreter, generator):\n",
+    "    image = Image.open(imageURL)\n",
+    "    image.thumbnail((640,640),Image.Resampling.LANCZOS)\n",
+    "    init_state = dict(\n",
+    "    IMAGE=image.convert('RGB')\n",
+    "    )\n",
+    "\n",
+    "    instruction = chat\n",
+    "    prog,_ = generator.generate(instruction)\n",
+    "    result, prog_state, html_str = interpreter.execute(prog,init_state,inspect=True)\n",
+    "    \n",
+    "    return result\n"
    ]
   }
  ],
