--- a/gqa_module.ipynb
+++ b/gqa_module.ipynb
@@ -6,27 +6,72 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# notebooks/gqa 수정 파일\n",
-    "\n",
-    "import os\n",
-    "import sys\n",
-    "module_path = os.path.abspath(os.path.join('..'))\n",
-    "if module_path not in sys.path:\n",
-    "    sys.path.append(module_path)\n",
-    "from PIL import Image\n",
-    "\n",
-    "def exe_gqa(imageURL, chat, interpreter, prompter, generator):\n",
-    "    image = Image.open(imageURL)\n",
-    "    image.thumbnail((640,640),Image.Resampling.LANCZOS)\n",
-    "    init_state = dict(\n",
-    "    IMAGE=image.convert('RGB')\n",
-    "    )\n",
-    "\n",
-    "    question = chat\n",
-    "    prog,_ = generator.generate(dict(question=question))\n",
-    "    result, prog_state, html_str = interpreter.execute(prog,init_state,inspect=True)\n",
-    "    return html_str\n",
-    "\n"
+    "{\n",
+    " \"cells\": [\n",
+    "  {\n",
+    "   \"cell_type\": \"code\",\n",
+    "   \"execution_count\": null,\n",
+    "   \"metadata\": {},\n",
+    "   \"outputs\": [],\n",
+    "   \"source\": [\n",
+    "    \"# notebooks/gqa 수정 파일\\n\",\n",
+    "    \"\\n\",\n",
+    "    \"import os\\n\",\n",
+    "    \"import sys\\n\",\n",
+    "    \"module_path = os.path.abspath(os.path.join('..'))\\n\",\n",
+    "    \"if module_path not in sys.path:\\n\",\n",
+    "    \"    sys.path.append(module_path)\\n\",\n",
+    "    \"from PIL import Image\\n\",\n",
+    "    \"\\n\",\n",
+    "    \"def exe_gqa(imageURL, chat, interpreter, prompter, generator):\\n\",\n",
+    "    \"    image = Image.open(imageURL)\\n\",\n",
+    "    \"    image.thumbnail((640,640),Image.Resampling.LANCZOS)\\n\",\n",
+    "    \"    init_state = dict(\\n\",\n",
+    "    \"    IMAGE=image.convert('RGB')\\n\",\n",
+    "    \"    )\\n\",\n",
+    "    \"\\n\",\n",
+    "    \"    question = chat\\n\",\n",
+    "    \"    prog,_ = generator.generate(dict(question=question))\\n\",\n",
+    "    \"    result, prog_state, html_str = interpreter.execute(prog,init_state,inspect=True)\\n\",\n",
+    "    \"    return html_str\\n\",\n",
+    "    \"\\n\",\n",
+    "    \"def exe_imageEdit(imageURL, chat, interpreter, generator):\\n\",\n",
+    "    \"    image = Image.open(imageURL)\\n\",\n",
+    "    \"    image.thumbnail((640,640),Image.Resampling.LANCZOS)\\n\",\n",
+    "    \"    init_state = dict(\\n\",\n",
+    "    \"    IMAGE=image.convert('RGB')\\n\",\n",
+    "    \"    )\\n\",\n",
+    "    \"\\n\",\n",
+    "    \"    instruction = chat\\n\",\n",
+    "    \"    prog,_ = generator.generate(instruction)\\n\",\n",
+    "    \"    result, prog_state, html_str = interpreter.execute(prog,init_state,inspect=True)\\n\",\n",
+    "    \"    \\n\",\n",
+    "    \"    return result\\n\"\n",
+    "   ]\n",
+    "  }\n",
+    " ],\n",
+    " \"metadata\": {\n",
+    "  \"kernelspec\": {\n",
+    "   \"display_name\": \"Python 3 (ipykernel)\",\n",
+    "   \"language\": \"python\",\n",
+    "   \"name\": \"python3\"\n",
+    "  },\n",
+    "  \"language_info\": {\n",
+    "   \"codemirror_mode\": {\n",
+    "    \"name\": \"ipython\",\n",
+    "    \"version\": 3\n",
+    "   },\n",
+    "   \"file_extension\": \".py\",\n",
+    "   \"mimetype\": \"text/x-python\",\n",
+    "   \"name\": \"python\",\n",
+    "   \"nbconvert_exporter\": \"python\",\n",
+    "   \"pygments_lexer\": \"ipython3\",\n",
+    "   \"version\": \"3.11.5\"\n",
+    "  }\n",
+    " },\n",
+    " \"nbformat\": 4,\n",
+    " \"nbformat_minor\": 4\n",
+    "}"
    ]
   }
  ],
