백 코드 통합

--- a/testserver.ipynb
+++ b/testserver.ipynb
@@ -6,28 +6,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 서버 구동\n",
-    "\n",
-    "from flask import Flask\n",
-    "import import_ipy햣nb\n",
-    "from gqa_module import *\n",
-    "import os\n",
-    "import sys\n",
-    "module_path = os.path.abspath(os.path.join('..'))\n",
-    "if module_path not in sys.path:\n",
-    "    sys.path.append(module_path)\n",
-    "%env OPENAI_API_KEY=<Enter you key here>\n",
-    "from PIL import Image\n",
-    "from IPython.core.display import HTML\n",
-    "from functools import partial\n",
-    "from engine.utils import ProgramGenerator, ProgramInterpreter\n",
-    "from prompts.gqa import create_prompt\n",
-    "\n",
     "app = Flask(__name__)\n",
     "\n",
-    "interpreter = ProgramInterpreter(dataset='gqa')\n",
-    "prompter = partial(create_prompt,method='all')\n",
-    "generator = ProgramGenerator(prompter=prompter)\n",
+    "session_id = 0\n",
     "\n",
     "@app.route('/')\n",
     "def index():\n",
@@ -36,29 +17,57 @@
     "        <body>\n",
     "            <h1><a href=\"/\">visprog</a></h1>\n",
     "            <ol>\n",
-    "                <a href=\"/visResult\">실행</a>\n",
+    "                <a href=\"/imgupload\">이미지업로드</a>\n",
     "            </ol>\n",
     "        </body>\n",
     "    </html>\n",
     "    '''\n",
     "\n",
-    "@app.route('/visResult')\n",
-    "def visResult():\n",
-    "    url = 'assets/camel1.png'\n",
-    "    chat = \"How many people or animals are in the image?\"\n",
-    "    result = exe_gqa(url, chat, interpreter, prompter, generator)\n",
+    "@app.route('/imgupload')\n",
+    "def imgupload():\n",
+    "    global session_id \n",
+    "    session_id = str(uuid.uuid4())\n",
     "    return f'''<!doctype html>\n",
     "    <html>\n",
     "        <body>\n",
-    "            <h1><a href=\"/\">visprog</a></h1>\n",
-    "            <ol>\n",
-    "                {result}\n",
-    "            </ol>\n",
+    "            <form action=\"http://localhost:5000/command_image\"\n",
+    "                method=\"POST\"\n",
+    "                enctype=\"multipart/form-data\">\n",
+    "                <input type=\"file\" name=\"file\" />\n",
+    "                <input type=\"submit\" />\n",
+    "            </form>\n",
     "        </body>\n",
     "    </html>\n",
     "    '''\n",
     "\n",
-    "app.run()"
+    "@app.route('/command_image', methods=['POST'])\n",
+    "def imgUploader():\n",
+    "    s3 = uploads_utils.s3Connection()\n",
+    "    bucket = 'dear-image-flask'\n",
+    "    file = request.files['file']\n",
+    "\n",
+    "    if file.filename == '':\n",
+    "        return 'No selected file'\n",
+    "    \n",
+    "    if uploads_utils.allowedFile(file.filename):\n",
+    "        filename = secure_filename(file.filename)\n",
+    "\n",
+    "        s3_filepath = f'{session_id}/{filename}'\n",
+    "        s3.upload_fileobj(file, bucket, s3_filepath)\n",
+    "\n",
+    "    # 이미지에 대하여 넘겨야 하는 command(명령) 관련 코드도 여기에 작성\n",
+    "    # 리다이렉션 어디로 해야할지..\n",
+    "    return f'''<!doctype html>\n",
+    "    <html>\n",
+    "        <body>\n",
+    "            <h1><a href=\"/\">File uploaded successfully</a></h1>\n",
+    "        </body>\n",
+    "    </html>\n",
+    "    '''\n",
+    "\n",
+    "\n",
+    "app.run()\n",
+    "\n"
    ]
   }
  ],
