--- a/testserver.ipynb
+++ b/testserver.ipynb
@@ -2,97 +2,195 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'mysql'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 21\u001b[0m\n\u001b[0;32m     18\u001b[0m load_dotenv()\n\u001b[0;32m     20\u001b[0m \u001b[38;5;66;03m#DB\u001b[39;00m\n\u001b[1;32m---> 21\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mdb_connection\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m connect_to_database\n\u001b[0;32m     22\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01muuid\u001b[39;00m\n\u001b[0;32m     23\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01muploads_utils\u001b[39;00m\n",
+      "File \u001b[1;32mc:\\Users\\buzzi\\Downloads\\Dear_Image-total_back\\db_connection.py:2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mos\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mmysql\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mconnector\u001b[39;00m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mdotenv\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m load_dotenv\n\u001b[0;32m      5\u001b[0m \u001b[38;5;66;03m# .env 파일에서 환경 변수 로드\u001b[39;00m\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'mysql'"
+     ]
+    }
+   ],
    "source": [
+    "# 서버 구동\n",
     "from flask import Flask, request, render_template, redirect, url_for, send_file\n",
-    "import import_ipynb\n",
     "from gqa_module import *\n",
     "import os\n",
     "import sys\n",
     "module_path = os.path.abspath(os.path.join('..'))\n",
     "if module_path not in sys.path:\n",
     "    sys.path.append(module_path)\n",
-    "%env OPENAI_API_KEY=\n",
+    "\n",
     "from PIL import Image\n",
     "from IPython.core.display import HTML\n",
     "from functools import partial\n",
     "from engine.utils import ProgramGenerator, ProgramInterpreter\n",
     "from prompts.gqa import create_prompt\n",
+    "from prompts.imgeEdit import PROMPT\n",
     "import googletrans\n",
+    "from dotenv import load_dotenv\n",
+    "load_dotenv()\n",
     "\n",
-    "translator = googletrans.Translator()\n",
+    "#DB\n",
+    "from db_connection import connect_to_database\n",
+    "import uuid\n",
+    "import uploads_utils\n",
+    "from werkzeug.utils import secure_filename\n",
+    "\n",
+    "OPENAI_API_KEY = os.getenv('api_key')\n",
     "\n",
     "app = Flask(__name__)\n",
-    "interpreter = ProgramInterpreter(dataset='gqa')\n",
-    "prompter = partial(create_prompt,method='all')\n",
-    "generator = ProgramGenerator(prompter=prompter)\n",
     "\n",
-    "# 전역 변수를 사용하여 입력값을 저장할 딕셔너리 선언\n",
+    "interpreter = ProgramInterpreter(dataset='imageEdit')\n",
+    "\n",
+    "session_id = 0\n",
+    "conn = connect_to_database()\n",
+    "cursor = conn.cursor(buffered=True)\n",
+    "\n",
+    "def create_prompt(instruction):\n",
+    "    return PROMPT.format(instruction=instruction)\n",
+    "\n",
+    "generator = ProgramGenerator(prompter=create_prompt)\n",
     "inputs = {}\n",
+    "origin = 'result/original.jpg'\n",
+    "translator = googletrans.Translator()\n",
     "\n",
     "@app.route('/')\n",
     "def index():\n",
     "    return f'''<!doctype html>\n",
     "    <html>\n",
     "        <body>\n",
-    "            <form action=\"/nextpage\" method=\"post\">\n",
-    "                <label for=\"name\">찾을 대상을 입력해주세요:</label><br>\n",
-    "                <input type=\"text\" id=\"name\" name=\"name\"><br><br>\n",
-    "                <input type=\"submit\" value=\"찾기\">\n",
+    "            <h1><a href=\"/\">visprog</a></h1>\n",
+    "            <div>초기화면<div>\n",
+    "            <ol>\n",
+    "                <a href=\"/start\">들어가기</a>\n",
+    "            </ol>\n",
+    "        </body>\n",
+    "    </html>\n",
+    "    '''\n",
+    "\n",
+    "@app.route('/start') #입력 받은 값 전송\n",
+    "def start():\n",
+    "    return f'''<!doctype html>\n",
+    "    <html>\n",
+    "        <body>\n",
+    "            <h1><a href=\"/\">visprog </a></h1>\n",
+    "            <div>시작화면<div>\n",
+    "            <ol>\n",
+    "                <a href=\"/imgupload\">들어가기</a>\n",
+    "            </ol>\n",
+    "        </body>\n",
+    "    </html>\n",
+    "    '''\n",
+    "\n",
+    "@app.route('/imgupload') #사진 업로드\n",
+    "def imgupload():\n",
+    "    global session_id\n",
+    "    session_id = str(uuid.uuid4())\n",
+    "    sql = 'INSERT INTO Session (session_id) VALUES (%s)'\n",
+    "    val = (session_id)\n",
+    "    cursor.execute(sql, val)\n",
+    "    conn.commit()\n",
+    "    return f'''<!doctype html>\n",
+    "    <html>\n",
+    "        <body>\n",
+    "            <form action=\"http://localhost:5000/command_image\"\n",
+    "                method=\"POST\"\n",
+    "                enctype=\"multipart/form-data\">\n",
+    "                <input type=\"file\" name=\"file\" />\n",
+    "                <input type=\"submit\" />\n",
     "            </form>\n",
     "        </body>\n",
     "    </html>\n",
     "    '''\n",
     "\n",
-    "@app.route('/nextpage', methods=['POST']) #입력 받은 값 전송\n",
-    "def nextpage():\n",
-    "    name = request.form['name']\n",
-    "    inputs['name'] = name\n",
-    "    return redirect(url_for('find_object'))\n",
+    "### 블러, 컬러팝 사용 시 객체 선택 필수\n",
+    "### >> ex) 낙타를 선택하고 블러해줘\n",
+    "### >> 객체 미선택 시 작동 안함\n",
     "\n",
-    "@app.route('/find_object')\n",
-    "def find_object():\n",
-    "    # 저장된 입력값을 가져와서 출력\n",
-    "    url = 'assets/camel1.png'\n",
-    "    name = inputs.get('name', None)\n",
-    "    chat = 'find'+name\n",
-    "    result = exe_gqa(url, chat, interpreter, prompter, generator)\n",
-    "    en_name = translator.translate(name, dest='en')\n",
-    "    result_path = 'result/'+en_name.text+'.jpg' #결과 이미지 경로\n",
     "\n",
-    "    if os.path.exists(result_path): #result 폴더에 파일이 존재할 경우\n",
-    "        return f'''<!doctype html>\n",
+    "@app.route('/command_image', methods=['POST']) #이미지 저장 및 커맨드 입력\n",
+    "def imgUploader():\n",
+    "    s3 = uploads_utils.s3Connection()\n",
+    "    bucket = 'dear-image-flask'\n",
+    "    file = request.files['file']\n",
+    "\n",
+    "    if file.filename == '':\n",
+    "        return 'No selected file'\n",
+    "\n",
+    "    if uploads_utils.allowedFile(file.filename):\n",
+    "        filename = secure_filename(file.filename)\n",
+    "\n",
+    "        s3_filepath = f'{session_id}/{filename}'\n",
+    "        s3.upload_fileobj(file, bucket, s3_filepath)\n",
+    "\n",
+    "    location = s3.get_bucket_location(Bucket=bucket)[\"LocationConstraint\"]\n",
+    "    url = f\"https://{bucket}.s3.{location}.amazonaws.com/{filename}\"\n",
+    "    sql = 'INSERT INTO OriginalImage (filepath, session_id) VALUES (%s, %s)'\n",
+    "    val = (url, session_id)\n",
+    "    cursor.execute(sql, val)\n",
+    "    conn.commit()\n",
+    "\n",
+    "    return f'''<!doctype html>\n",
     "    <html>\n",
     "        <body>\n",
-    "            <h1><a href=\"/\">visprog</a></h1>\n",
-    "            <h2>찾은 대상: {name}</h2>\n",
-    "            <hr><img src='/get_image?url={result_path}'></hr>\n",
+    "            <form action=\"/imageEdit\" method=\"post\">\n",
+    "                <label for=\"command_contents\">명령을 입력해주세요</label><br>\n",
+    "                <input type=\"text\" id=\"command_contents\" name=\"command_contents\"><br><br>\n",
+    "                <input type=\"submit\" value=\"입력\">\n",
+    "            </form>\n",
     "        </body>\n",
     "    </html>\n",
     "    '''\n",
-    "    else:\n",
-    "        return f'''<!doctype html>\n",
+    "\n",
+    "@app.route('/imageEdit', methods=['POST']) #입력 받은 값 전송\n",
+    "def imageEdit():\n",
+    "    command_contents = request.form['command_contents'] #명령 가져오기 및 저장\n",
+    "    en_command = translator.translate(command_contents, dest='en')\n",
+    "    sql1 = 'SELECT filepath FROM OriginalImage WHERE session_id=%s'\n",
+    "    val1 = (session_id)\n",
+    "    cursor.execute(sql1, val1)\n",
+    "    image_path = cursor.fetchone()[0]\n",
+    "\n",
+    "    result = exe_imageEdit(image_path, en_command.text, interpreter, generator)\n",
+    "\n",
+    "    result_path = './result'\n",
+    "\n",
+    "    result.save(result_path)\n",
+    "\n",
+    "    return f'''<!doctype html>\n",
     "    <html>\n",
     "        <body>\n",
     "            <h1><a href=\"/\">visprog</a></h1>\n",
-    "            <h2>대상을 찾을 수 없습니다.</h2>\n",
+    "            <div> instruction : {command_contents}<div>\n",
+    "            <div> instruction : {en_command.text}<div>\n",
+    "            <hr>원본 : <img src='/get_image?url={origin}' width='200' height='200'></hr>\n",
+    "            <hr>수정 : <img src='/get_image?url={result_path}' width='200' height='200'></hr>\n",
     "        </body>\n",
     "    </html>\n",
     "    '''\n",
-    "    \n",
+    "\n",
     "@app.route('/get_image')\n",
     "def get_image():\n",
     "    # URL로 전달된 파일 경로 가져오기\n",
-    "    url = request.args.get('url')\n",
-    "    \n",
+    "    sql1 = 'SELECT filepath FROM OriginalImage WHERE session_id=%s'\n",
+    "    val1 = (session_id)\n",
+    "    cursor.execute(sql1, val1)\n",
+    "    image_path = cursor.fetchone()[0]\n",
+    "    url = request.args.get(image_path)\n",
+    "\n",
     "    # 파일 경로로부터 이미지 파일 읽어오기\n",
     "    img_path = os.path.join(app.root_path, url)\n",
-    "    \n",
+    "\n",
     "    # 이미지 파일을 클라이언트에게 전송\n",
     "    return send_file(img_path)\n",
-    "\n",
     "\n",
     "app.run()"
    ]
@@ -114,7 +212,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
